bdr.BDR.scala.error
Erreur de compilation :
BDR:2: error: not found: type mes
var String:mes
           ^BDR:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var String:mes
    ^BDR:2: error: local variables must be initialized
var String:mes
    ^BDR:5: error: not found: value mes
  mes=litMesage()
  ^BDR:6: error: not found: value mes
  if(mes=="R")
     ^BDR:11: error: not found: value mes
  else if(mes=="L")
          ^BDR:16: error: not found: value mes
  else if(mes=="I")
          ^BDR:21: error: not found: value mes
  else if(mes=="A")
          ^BDR:25: error: not found: value mes
    else if(mes=="B")
            ^BDR:30: error: not found: value mes
    else if(mes=="C")
            ^BDR:36: error: not found: value mes
    else if(mes=="Z")
            ^BDR:40: error: not found: value mes
      else if(mes=="Y")
              ^BDR:45: error: not found: value mes
      else if(mes=="X")
              ^