bdr.BDR.scala.code
var fin=false
var String:mes
while(fin==false)
{
  mes=litMesage()
  if(mes=="R")
  {
    droite()
    avance()
  }
  else if(mes=="L")
  {
    gauche()
  	avance()
  }
  else if(mes=="I")
  {
    retourne()
    avance
  }
  else if(mes=="A")
  {
    avance()
  }
    else if(mes=="B")
  {
    avance()
    avance()
  }
    else if(mes=="C")
  {
    avance()
    avance()
    avance()
  }
    else if(mes=="Z")
  {
    recule()
  }
      else if(mes=="Y")
  {
    recule()
    recule()
  }
      else if(mes=="X")
  {
    recule()
    recule()
    recule()
  }
  else
  {
    fin=true
  }
}
fin=false